--- a/app/views/v5/gov-payment-confirmed.html
+++ b/app/views/v5/gov-payment-confirmed.html
@@ -23,7 +23,7 @@
               Total amount:
               
             </p>
-            <span id="amount" class="amount govuk-!-font-size-36 govuk-!-font-weight-bold" style="font-size:36px !important;">£18.70</span>
+            <span id="amount" class="amount govuk-!-font-size-36 govuk-!-font-weight-bold" style="font-size:36px !important;"> £123.80</span>
         </div>
 
         <dl class="govuk-summary-list">
@@ -48,7 +48,7 @@
               Name on card
             </dt>
             <dd class="govuk-summary-list__value">
-              Jane Doe
+              Michelle Doe
             </dd>
           </div>
           <div class="govuk-summary-list__row">
