--- a/app/views/v5/penalty-charge-notice-details-bsa.html
+++ b/app/views/v5/penalty-charge-notice-details-bsa.html
@@ -54,12 +54,36 @@
       <h2 class="nhsuk-heading-m">Penalty Charge Notice amount</h2>
        <div class="nhsuk-promo">
         
-       <p>Prescription charges: £23.80<br>
-        </p><p>Penalty charge: £100.00</p>
-        <p><b>Total amount:  £123.80</b>
         
+              <p>Prescription charges: £23.80</p>
+           
+            
+          
+          
+            
+             <p> Penalty charge:  £100.00</p>
+           
+            
+            
+        
+        
+        
+        
+            
+           
+              
+              
+           
+            
       
-      </p></div>
+            
+        
+          
+          
+    
+        <p>Total amount:<br> <strong style="font-size: 36px;">£123.80</strong></p>
+      
+      </div>
 
 
       <dl class="nhsuk-summary-list">
@@ -93,7 +117,7 @@
             Exemption reason ticked
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Gets Income Support or income-related Employment and Support Allowance.</p>
+            <p>Holds a Prescription Prepayment Certificate (PPC)</p>
             
           </dd>
       
@@ -114,7 +138,7 @@
     </div>
    
   </div>
-  <a href="/v5/what-you-need-to-do-next" class="nhsuk-button">
+  <a href="what-you-need-to-do-next-bsa" class="nhsuk-button">
     Continue
   </a>
   <style>
