--- a/app/views/v5/penalty-charge-notice-details.html
+++ b/app/views/v5/penalty-charge-notice-details.html
@@ -51,43 +51,39 @@
       </div>
      
     
-       <h2>Penalty Charge Notice amount</h2>
-       <dl class="nhsuk-summary-list">
-        <div class="nhsuk-summary-list__row">
-         
-          <dd class="nhsuk-summary-list__value">
-            Prescription charges
-          </dd>
-          <dt class="nhsuk-summary-list__key">
-            £23.80
-           </dt>
-        </div>
+      <h2 class="nhsuk-heading-m">Penalty Charge Notice amount</h2>
+       <div class="nhsuk-promo">
         
-        <div class="nhsuk-summary-list__row">
-          <dd class="nhsuk-summary-list__value">
-            Penalty charge
-          </dd>
-          <dt class="nhsuk-summary-list__key">
-            £100.00
-          </dt>
-          
-      
-        </div>
-      
-        <div class="nhsuk-summary-list__row">
-          
-          <dd class="nhsuk-summary-list__value">
-            <p>Total amount</p>
+        
+              <p>Prescription charges: £23.80</p>
+           
             
-          </dd>
-          <dt class="nhsuk-summary-list__key">
-            £123.80
-          </dt>
-      
-        </div>
+          
+          
+            
+             <p> Penalty charge:  £100.00</p>
+           
+            
+            
         
-      </dl>
-   
+        
+        
+        
+            
+           
+              
+              
+           
+            
+      
+            
+        
+          
+          
+    
+        <p>Total amount:<br> <strong style="font-size: 36px;">£123.80</strong></p>
+      
+      </div>
 
 
       <dl class="nhsuk-summary-list">
@@ -145,4 +141,11 @@
   <a href="/v5/what-you-need-to-do-next" class="nhsuk-button">
     Continue
   </a>
+  <style>
+    .nhsuk-promo{
+    background:white;
+    padding:20px;
+    box-shadow: 0 4px 0 0 #D8DDE0;
+    }
+  </style>
 {% endblock %}
