--- a/app/views/v4/enter-exemption-certificate-number.html
+++ b/app/views/v4/enter-exemption-certificate-number.html
@@ -28,16 +28,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-  <p class="nhsuk-phase-banner__content">
-    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-      BETA
-     </strong>
-     <span class="nhsuk-phase-banner__text">
-       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-    </span>
-   </p>
- </div>
+
 <div class="nhsuk-back-link">
   <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
     <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
@@ -48,7 +39,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="v4-certificate-number-input" method="get" class="form">
+      <form action="enq-benefit-num" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1>What is your [Benefit] number?</h1>
