--- a/app/views/v5/check-personal-details.html
+++ b/app/views/v5/check-personal-details.html
@@ -3,24 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-<header class="nhsuk-header nhsuk-header--transactional" role="banner">
-  <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
-
-        <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
-          <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
-        </svg>
-
-      </a>
-    </div>
-    <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
-    </div>
-
-  </div>
-
-</header>
+Check your personal details are correct
 {% endblock %}
 
 {% block outerContent %}
@@ -28,16 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-  <p class="nhsuk-phase-banner__content">
-    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-      BETA
-     </strong>
-     <span class="nhsuk-phase-banner__text">
-       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-    </span>
-   </p>
- </div>
+
 <div class="nhsuk-back-link">
 <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
   <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
@@ -66,7 +40,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="/v3/update-name">
+              <a href="update-name">
                 Change<span class="nhsuk-u-visually-hidden"> name</span>
               </a>
         
@@ -84,7 +58,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="/v3/update-dob">
+              <a href="update-dob">
                 Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
               </a>
         
@@ -102,7 +76,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="/v3/update-address">
+              <a href="update-address">
                 Change<span class="nhsuk-u-visually-hidden"> address</span>
               </a>
         
