--- a/app/views/v5/confirmation-page.html
+++ b/app/views/v5/confirmation-page.html
@@ -1,45 +1,23 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-<header class="nhsuk-header nhsuk-header--transactional" role="banner">
-  <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
-
-        <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
-          <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
-        </svg>
-
-      </a>
-    </div>
-    <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
-    </div>
-
-  </div>
-
-</header>
+An exemption has been found
 {% endblock %}
 
 {% block content %}
-<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-  <p class="nhsuk-phase-banner__content">
-    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-      BETA
-     </strong>
-     <span class="nhsuk-phase-banner__text">
-       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-    </span>
-   </p>
- </div>
+
 
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+
+
+      <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1>An exemption has been confirmed</h1>
       <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
         <div class="nhsuk-card__content">
-          <h1 class="nhsuk-card__heading" style="text-align: center; color: white;">
-           An exemption has been found
-          </h1>
+          <h2 class="nhsuk-card__heading" style="text-align: center; color: white;">
+           Thank you
+          </h2>
           
           <h2 class="nhsuk-card__content" style="text-align: center; color: white;">Your case has now been closed.</h2>
           
@@ -53,10 +31,15 @@
 
       <p>We have matched an exemption based on the details you have given.</p>
 
-      
 
-      <p>Michelle Doe</p>
-      <p>Reference number: 01234567890</p>
+      <div class="nhsuk-inset-text">
+        <span class="nhsuk-u-visually-hidden">Information: </span>
+        <p>Michelle Doe</p>
+        <p>Reference number: 01234567890</p>
+      </div>
+      
+      <p><a href="">Print this page</a></p>
+      
       <h2>How to avoid a future enquiry letter</h2>
       <p>We match exemptions using a combination of your:</p>
       <ul>
@@ -68,10 +51,10 @@
         <p>Make sure these are correct at your GP surgery, dental practice, and any benefits organisations.</p>
      <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
         
-        <p> <a href="">Check if you are currently entitled to help with your health costs.</a></p>
-        <p><a href="">Print this page</a></p>
+        <p> <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">Check if you are currently entitled to help with your health costs.</a></p>
+       
 <h3>Feedback</h3>
-<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
+<p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 <p><a href="">Leave feedback</a></p>
    
 
