--- a/app/views/v5/partial-payment-made.html
+++ b/app/views/v5/partial-payment-made.html
@@ -10,15 +10,14 @@ Payment confirmation
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
+
       <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
-      <h1 class="nhsuk-heading-xl">Full payment made</h1>
-
-
+        <h1 class="nhsuk-heading-xl">Partial payment made</h1>
       <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
         <div class="nhsuk-card__content">
           
           
-          <h2 class="nhsuk-card__content" style="text-align: center; color: white;">You have paid your Penalty Charge Notice in full and your case has now been closed.</h2>
+          <h2 class="nhsuk-card__content" style="text-align: center; color: white;">You have paid £100 towards your Penalty Charge Notice</h2>
           
           
           
@@ -28,7 +27,7 @@ Payment confirmation
 
       </div>
        <h2>Payment confirmation</h2>
-      <p>We've received your full payment and have closed your case. You do not need to do anything else.</p>
+      <p>We've received your payment towards your Penalty Charge Notice.</p>
 
       <div class="nhsuk-inset-text">
         <span class="nhsuk-u-visually-hidden">Information: </span>
@@ -51,17 +50,27 @@ Payment confirmation
         
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              You've paid:
+              So far you've paid:
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £123.80
+              £100
             </dd>
         
             
         
           </div>
         
-          
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              You still need to pay:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              <p >£23.80</p>
+            </dd>
+        
+            
+        
+          </div>
         
           
         </dl>
@@ -71,14 +80,15 @@ Payment confirmation
       
       </div>
 
-      <a href="javascript:window.print();"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
-        Print or save this page
+     <h3></h3>
+      <a href=""><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
+        Make another payment
       </button></a>
-
-      <h3>How to avoid a Penalty Charge Notice in the future</h3>
+      <h2>How to avoid a Penalty Charge Notice in the future</h2>
         <p>Make sure your details are correct at your GP surgery, dental practice, and any benefits organisations.</p>
      <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
         
+
      <div class="nhsuk-action-link">
       <a class="nhsuk-action-link__link" href="https://www.nhs.uk/service-search/minor-injuries-unit/locationsearch/551">
         <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
@@ -88,12 +98,15 @@ Payment confirmation
         <span class="nhsuk-action-link__text">Check if you are currently entitled to help with your health costs.</span>
       </a>
     </div>
+      
         
 <h3>Feedback</h3>
 <p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
 <p><a href="">Leave feedback</a></p>
    
-
+<a href="javascript:window.print();"><p>
+  Print this page
+</p></a>
     </div>
   </div>
 {% endblock %}
