--- a/app/views/v5/pay-by-dd.html
+++ b/app/views/v5/pay-by-dd.html
@@ -3,24 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-<header class="nhsuk-header nhsuk-header--transactional" role="banner">
-  <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
-
-        <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
-          <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
-        </svg>
-
-      </a>
-    </div>
-    <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v3/respond-to-your-letter">Respond to your letter</a>
-    </div>
-
-  </div>
-
-</header>
+Paying by Direct Debit
 {% endblock %}
 
 {% block outerContent %}
@@ -28,16 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-  <p class="nhsuk-phase-banner__content">
-    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-      BETA
-     </strong>
-     <span class="nhsuk-phase-banner__text">
-       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-    </span>
-   </p>
- </div>
+
 <div class="nhsuk-back-link">
 <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
   <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
@@ -49,7 +23,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="direct-debit-instalment-option" method="post" class="form">
+      <form action="dd-checkbox" method="post" >
 
         <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
         <h1 class="nhsuk-heading-xl">Paying by Direct Debit</h1>
@@ -66,25 +40,25 @@
               <div class="nhsuk-checkboxes">
         
                 <div class="nhsuk-checkboxes__item">
-                  <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">
+                  <input class="nhsuk-checkboxes__input" id="example-1" name="contact" type="checkbox" value="bank">
                   <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
                     I'm using my own bank account
                   </label>
                 </div>
         
                 <div class="nhsuk-checkboxes__item">
-                  <input class="nhsuk-checkboxes__input" id="example-2" name="example" type="checkbox" value="phone">
+                  <input class="nhsuk-checkboxes__input" id="example-2" name="contact" type="checkbox" value="account">
                   <label class="nhsuk-label nhsuk-checkboxes__label" for="example-2">
                     I'm the only person required to authorise debits from this account
                   </label>
                 </div>
         
                 <div class="nhsuk-checkboxes__item">
-                  <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message">
+                  <input class="nhsuk-checkboxes__input" id="example-3" name="contact" type="checkbox" value="direct">
                   <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
                     I understand that if you are unable to take payments on more than one occasion, I might have to pay extra charges and may not be able to pay by Direct Debit again
                   </label>
-                </div>
+                </div><br>
         <p>Read the <a href="">Direct Debit Guarantee</a></p>
               </div>
             </fieldset>
