First push, with new PCN screens and index

--- a/app/views/enquiry.html
+++ b/app/views/enquiry.html
@@ -34,23 +34,24 @@ Enquiry Letter
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-full">
     <!-- Change the page title here -->
-    <h1 class="nhsuk-heading-xl"><span class="nhsuk-caption-xl nhsuk-caption--bottom">Respond to your letter</span>Enquiry Letter Prototypes
+    <h1 class="nhsuk-heading-xl"><span class="nhsuk-caption-xl nhsuk-caption--bottom">Respond to your
+        letter</span>Enquiry Letter Prototypes
     </h1>
     <!-- Add your content here -->
     <!-- Styles and components can be found at https://beta.nhs.uk/service-manual/styles-components-patterns -->
-  
+
 
     <hr>
 
     <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-5">
       <summary class="nhsuk-details__summary">
-        <span class="nhsuk-details__summary-text"><small>Version 4 - Private Beta - (06/03/2023)</small></span>
+        <span class="nhsuk-details__summary-text"><small>Version 5 - Private Beta - (21/03/2023)</small></span>
       </summary>
 
-      
+
 
       <div class="nhsuk-details__text">
-        
+
         <h2>Prototype Functionality</h2>
 
         <dl class="nhsuk-summary-list">
@@ -62,62 +63,166 @@ Enquiry Letter
             <dd class="nhsuk-summary-list__value">
               NE1 3JA
             </dd>
-        
-            
-        
+
+
+
           </div>
-        
+
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
               NHSBSA Journey:
             </dt>
             <dd class="nhsuk-summary-list__value">
-             NE2 4XL
+              NE2 4XL
             </dd>
-        
-           
-        
+
+
+
           </div>
-        
-          
-        
+
+
+
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-             We cannot find your details:
+              We cannot find your details:
             </dt>
             <dd class="nhsuk-summary-list__value">
               WA4 1AB
-              
+
             </dd>
-        
-            
-        
+
+
+
           </div>
-        
+
         </dl>
 
         <h2 class="nhsuk-heading-l">Hypothesis A
-          
+
         </h2>
 
-        <p style="background: #DEE0E2; padding: 20px;">We believe by adding in content or a page around why the user cannot pay at the enquiry stage of the journey will help the user understand that they will have to wait until they get a PCN.
-          This is in hopes to cause less frustration and confusion. We understand from our CSAT results that this is one of the biggest issues the user faces with this journey.</p>
+        <p style="background: #DEE0E2; padding: 20px;">We believe by adding in content or a page around why the user
+          cannot pay at the enquiry stage of the journey will help the user understand that they will have to wait until
+          they get a PCN.
+          This is in hopes to cause less frustration and confusion. We understand from our CSAT results that this is one
+          of the biggest issues the user faces with this journey.</p>
 
         <hr>
 
         <h3 class="nhsuk-heading-m">What we created:</h3>
         <ul class="nhsuk-list nhsuk-list--bullet">
-          <li>For this journey we have made a couple of changes to the journey we removed some of the personal details pages such as Is this how your name was written on your [Benefit]? As well as the date of birth and address question which follows after that page. Instead the journey now just has a check your details page where the user can change their details at this point if they need to. This was to shorten the journey for the user.</li>
-          <li>We have added one journey to this prototype which asks users on the enquiry letter page whether they want to pay or confirm their entitlement. If they select pay it will give the user a kickout screen explaining why they cannot pay. If they select confirm their entitlement it will take them through the rest of the journey.</li>
+          
          
+          <li>We have added a new iteration of the filter page to this prototype which asks users whether they want
+            to pay, confirm their entitlement or try to see if they have an exemption if they are not sure. If they select pay it will give the user a kickout screen explaining
+            why they cannot pay. If they select confirm their entitlement or im not sure it will take them through the rest of the
+            journey.</li>
+
         </ul>
         <h3 class="nhsuk-heading-m">What we plan to test:</h3>
         <ul class="nhsuk-list nhsuk-list--bullet">
-          <li>For this round of research too we are going to add in some AB testing around why users can't pay at the enquiry stage we are going to do AB testing with the confirm your entitlement or pay screen against some extra content on the what happens next screen</li>
-       
-        
+          <li>TESTING TO GO HERE</li>
+
+
+          
+        </ul>
+        <hr>
+
+        <a class="nhsuk-button" href="v5-enquiry/respond-to-your-letter">Respond to your letter</a>
+
+
+
+      </div>
+    </details>
+
+    <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-5">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text"><small>Version 4 - Private Beta - (06/03/2023)</small></span>
+      </summary>
+
+
+
+      <div class="nhsuk-details__text">
+
+        <h2>Prototype Functionality</h2>
+
+        <dl class="nhsuk-summary-list">
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              DWP Journey:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              NE1 3JA
+            </dd>
+
+
+
+          </div>
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              NHSBSA Journey:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              NE2 4XL
+            </dd>
+
+
+
+          </div>
+
+
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              We cannot find your details:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              WA4 1AB
+
+            </dd>
+
+
+
+          </div>
+
+        </dl>
+
+        <h2 class="nhsuk-heading-l">Hypothesis A
+
+        </h2>
+
+        <p style="background: #DEE0E2; padding: 20px;">We believe by adding in content or a page around why the user
+          cannot pay at the enquiry stage of the journey will help the user understand that they will have to wait until
+          they get a PCN.
+          This is in hopes to cause less frustration and confusion. We understand from our CSAT results that this is one
+          of the biggest issues the user faces with this journey.</p>
+
+        <hr>
+
+        <h3 class="nhsuk-heading-m">What we created:</h3>
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>For this journey we have made a couple of changes to the journey we removed some of the personal details
+            pages such as Is this how your name was written on your [Benefit]? As well as the date of birth and address
+            question which follows after that page. Instead the journey now just has a check your details page where the
+            user can change their details at this point if they need to. This was to shorten the journey for the user.
+          </li>
+          <li>We have added one journey to this prototype which asks users on the enquiry letter page whether they want
+            to pay or confirm their entitlement. If they select pay it will give the user a kickout screen explaining
+            why they cannot pay. If they select confirm their entitlement it will take them through the rest of the
+            journey.</li>
+
+        </ul>
+        <h3 class="nhsuk-heading-m">What we plan to test:</h3>
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>For this round of research too we are going to add in some AB testing around why users can't pay at the
+            enquiry stage we are going to do AB testing with the confirm your entitlement or pay screen against some
+            extra content on the what happens next screen</li>
+
+
           <li>We also want to find out if the shortened journey of the check your details screen works for the user</li>
-        
+
           <li>We plan to find out more around the service name and if users understand it</li>
         </ul>
         <hr>
@@ -125,7 +230,7 @@ Enquiry Letter
         <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter</a>
 
 
-        
+
       </div>
     </details>
 
@@ -133,11 +238,11 @@ Enquiry Letter
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text"><small>Version 3 - Private Beta - (27/2/2023)</small></span>
       </summary>
-      
-      
+
+
 
       <div class="nhsuk-details__text">
-        
+
         <h2>Prototype Functionality</h2>
 
         <dl class="nhsuk-summary-list">
@@ -149,65 +254,73 @@ Enquiry Letter
             <dd class="nhsuk-summary-list__value">
               NE1 3JA
             </dd>
-        
-            
-        
+
+
+
           </div>
-        
+
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
               NHSBSA Journey:
             </dt>
             <dd class="nhsuk-summary-list__value">
-             NE2 4XL
+              NE2 4XL
             </dd>
-        
-           
-        
+
+
+
           </div>
-        
-          
-        
+
+
+
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-             We cannot find your details:
+              We cannot find your details:
             </dt>
             <dd class="nhsuk-summary-list__value">
               WA4 1AB
-              
+
             </dd>
-        
-            
-        
+
+
+
           </div>
-        
+
         </dl>
 
         <h2 class="nhsuk-heading-l">Hypothesis A
-          
+
         </h2>
 
-        <p style="background: #DEE0E2; padding: 20px;">We are going to be testing this prototype with users. The design has been updated to be inline with GDS as well as the content which has been review by the content designer on our team.</p>
+        <p style="background: #DEE0E2; padding: 20px;">We are going to be testing this prototype with users. The design
+          has been updated to be inline with GDS as well as the content which has been review by the content designer on
+          our team.</p>
 
         <hr>
 
         <h3 class="nhsuk-heading-m">What we created:</h3>
         <ul class="nhsuk-list nhsuk-list--bullet">
-          <li>We updated the challenge journey with the new NHS toolkit, removing old components that weren't inline with GDS. We have done a content review and placed in content to keep inline with GDS. We have removed an error screen from the journey as it was deemed unessescary and added a screen around the benefit number.</li>
-          
-         
+          <li>We updated the challenge journey with the new NHS toolkit, removing old components that weren't inline
+            with GDS. We have done a content review and placed in content to keep inline with GDS. We have removed an
+            error screen from the journey as it was deemed unessescary and added a screen around the benefit number.
+          </li>
+
+
         </ul>
         <h3 class="nhsuk-heading-m">What we plan to test:</h3>
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>We plan to test the whole journey to get feedback on the pages</li>
-          <li>We want to focus on the "respond to your letter page", the kickout screens, confirmation page and the "enquiry letter details" screen</li>
+          <li>We want to focus on the "respond to your letter page", the kickout screens, confirmation page and the
+            "enquiry letter details" screen</li>
         </ul>
         <h3 class="nhsuk-heading-m">What we found:</h3>
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>We found people generally found the journey simple and easy</li>
           <li>Users found the journey a recognisable service and the content self expanitory</li>
-          <li>One of the users found the questions around their details quite tedious before they get to their check your details page</li>
-          <li>Another user found the yellow warning callout box a little stressful and could cause anxiety to some people</li>
+          <li>One of the users found the questions around their details quite tedious before they get to their check
+            your details page</li>
+          <li>Another user found the yellow warning callout box a little stressful and could cause anxiety to some
+            people</li>
         </ul>
         <h3 class="nhsuk-heading-m">Any known issues?</h3>
         <ul class="nhsuk-list nhsuk-list--bullet">
@@ -218,7 +331,7 @@ Enquiry Letter
         <a class="nhsuk-button" href="v3/respond-to-your-letter">Respond to your letter</a>
 
 
-        
+
       </div>
     </details>
 
@@ -227,7 +340,7 @@ Enquiry Letter
         <span class="nhsuk-details__summary-text"><small>Version 2</small></span>
       </summary>
       <div class="nhsuk-details__text">
-        
+
       </div>
     </details>
 
@@ -236,7 +349,7 @@ Enquiry Letter
         <span class="nhsuk-details__summary-text"><small>Version 1</small></span>
       </summary>
       <div class="nhsuk-details__text">
-        
+
       </div>
     </details>
 
