--- a/app/views/v4/check-personal-details-dwp.html
+++ b/app/views/v4/check-personal-details-dwp.html
@@ -44,16 +44,7 @@
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-xl">Check your personal details are correct</h1>
-        
-        
-        
-        
-        <div class="nhsuk-inset-text">
-          <span class="nhsuk-u-visually-hidden">Information: </span>
-          <p>These are the personal details we currently hold for you. </p>
-          <p>If these do not match, we may not be able to find your exemption and you may receive a penalty charge notice.</p>
-        </div>
-        
+        <p>These are the personal details we current hold for you. If these do not match, we may not be able to find your exemption and you may receive a penalty charge notice.</p>
         <dl class="nhsuk-summary-list">
 
           <div class="nhsuk-summary-list__row">
