--- a/app/views/v5/direct-debit-instalment-option.html
+++ b/app/views/v5/direct-debit-instalment-option.html
@@ -64,7 +64,7 @@ Select how many months you want to pay over
        
        </div>
     </div>
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you cannot afford any of these monthly plans (link opens in new window).</a></p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you cannot afford any of these monthly plans (link opens in new window).</a></p>
             </fieldset>
         
         
