--- a/app/views/v5/pay-by-dd.html
+++ b/app/views/v5/pay-by-dd.html
@@ -37,6 +37,7 @@ Paying by Direct Debit
             <p>If we are unable to take a payment, you may have to pay extra charges.</p>
           </div>
           <p>If we are unable to take payments on more than one occasion, your Direct Debit plan may be cancelled and you may need to pay the amount you owe in full.</p>
+          <h3>You must confirm the following to set up a Direct Debit online</h3>
               <div class="nhsuk-checkboxes">
         
                 <div class="nhsuk-checkboxes__item">
