--- a/app/views/v5/penalty-charge-notice-details-bsa.html
+++ b/app/views/v5/penalty-charge-notice-details-bsa.html
@@ -117,7 +117,7 @@
             Exemption reason ticked
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Holds a Prescription Prepayment Certificate (PPC)</p>
+            <p>Has a valid medical exemption certificate</p>
             
           </dd>
       
