--- a/app/views/v5/unable-to-set-up-direct-debit.html
+++ b/app/views/v5/unable-to-set-up-direct-debit.html
@@ -34,7 +34,7 @@ You are unable to set up a Direct Debit
           <li>the only person required to authorise debits on this account</li>
         </ul>
 
-        <p><a>If you cannot confirm this and need to contact us</a></p>
+        <p><a href="">Contact us if you cannot confirm this.</a></p>
         
         <a href="pay-by-dd"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
