--- a/app/views/penalty.html
+++ b/app/views/penalty.html
@@ -4,15 +4,18 @@
 
 <!-- Extends the layout from /views/layout.html -->
 {% extends 'layout.html' %}
-<!-- 
+
+<!-- Variables -->
+{% set loggedIn = false %}
+<!--
   In /views/layout.html you can:
-    - change the header and footer 
+    - change the header and footer
     - add custom CSS and JavaScript
 -->
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+PCN
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
@@ -29,77 +32,104 @@
 <!-- Page layout code can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
 <div class="nhsuk-grid-row">
-   <div class="nhsuk-grid-column-full">
-     <!-- Change the page title here -->
-     <h1 class="nhsuk-heading-xl">Transforming Exemption Checking Service</h1>
-     <!-- Add your content here -->
-     <!-- Styles and components can be found at https://beta.nhs.uk/service-manual/styles-components-patterns -->
-     <div class="nhsuk-warning-callout">
-      <h3 class="nhsuk-warning-callout__label">
-        <span role="text">
-          <span class="nhsuk-u-visually-hidden">Important: </span>
-          Important
-        </span>
-      </h3>
-      <p>Don't use any of this prototype code on production services, it doesn't adhere to development standards and is hacked together quickly and roughly.</p>
-    </div>
- 
-     <hr>
- 
-     <div class="nhsuk-card">
-       <div class="nhsuk-card__content">
-         <h3 class="nhsuk-card__heading">
-           Enquiry Journey
-         </h3>
-         <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge an enquiry letter.</p>
-         <div class="nhsuk-action-link">
-           <a class="nhsuk-action-link__link" href="enquiry">
-             <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
-               <path d="M0 0h24v24H0z" fill="none"></path>
-               <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
-             </svg>
-             <span class="nhsuk-action-link__text">Enquiry Letter</span>
-           </a>
-         </div>
-       </div>
-     </div>
- 
-     <div class="nhsuk-card">
-       <div class="nhsuk-card__content">
-         <h3 class="nhsuk-card__heading">
-          Penalty Charge Notice Journey
-         </h3>
-         <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge or pay a PCN.</p>
-         <div class="nhsuk-action-link">
-           <a class="nhsuk-action-link__link" href="pcn">
-             <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
-               <path d="M0 0h24v24H0z" fill="none"></path>
-               <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
-             </svg>
-             <span class="nhsuk-action-link__text">PCN</span>
-           </a>
-         </div>
-       </div>
-     </div>
- 
-     <div class="nhsuk-card">
-       <div class="nhsuk-card__content">
-         <h3 class="nhsuk-card__heading">
-           Surcharge Notice Journey
-         </h3>
-         <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge or pay a surcharge notice.</p>
-         <div class="nhsuk-action-link">
-           <a class="nhsuk-action-link__link" href="surcharge">
-             <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
-               <path d="M0 0h24v24H0z" fill="none"></path>
-               <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
-             </svg>
-             <span class="nhsuk-action-link__text">Surcharge</span>
-           </a>
-         </div>
-       </div>
-     </div>
- 
-   </div>
- </div>
+  <div class="nhsuk-grid-column-full">
+    <!-- Change the page title here -->
+    <h1 class="nhsuk-heading-xl"><span class="nhsuk-caption-xl nhsuk-caption--bottom">Respond to your letter</span>Penalty Charge Notice Prototypes
+    </h1>
+    <!-- Add your content here -->
+    <!-- Styles and components can be found at https://beta.nhs.uk/service-manual/styles-components-patterns -->
+  
+
+    <hr>
+
+    <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-5">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text"><small>Version 5 - Private Beta - (08/03/2023)</small></span>
+      </summary>
+
+      
+
+      <div class="nhsuk-details__text">
+        
+        <h2>Prototype Functionality</h2>
+
+        <dl class="nhsuk-summary-list">
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              DWP Journey:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              NE1 3JA
+            </dd>
+        
+            
+        
+          </div>
+        
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              NHSBSA Journey:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+             NE2 4XL
+            </dd>
+        
+           
+        
+          </div>
+        
+          
+        
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+             We cannot find your details:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              WA4 1AB
+              
+            </dd>
+        
+            
+        
+          </div>
+        
+        </dl>
+
+        <h2 class="nhsuk-heading-l">Hypothesis A
+          
+        </h2>
+
+        <p style="background: #DEE0E2; padding: 20px;">We believe that updating the challenge journey in the new toolkit and inline with GDS will improve the accessibility of the journey whilst also keeping consistent with the NHS UK branding. This journey is to be tested on the 27/3/2023</p>
+
+        <hr>
+
+        <h3 class="nhsuk-heading-m">What we created:</h3>
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>We created a PCN journey with content thats been reviewed by the content designer and also updated components inline with GDS</li>
+          
+         
+        </ul>
+        <h3 class="nhsuk-heading-m">What we plan to test:</h3>
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>We plan on doing user research with the PCN journey on the week commencing the 27/3/2023</li>
+       
+        
+          <li>We want to test the journey and see if people can successfully pay</li>
+        
+          
+        </ul>
+        <hr>
+
+        <a class="nhsuk-button" href="v5/respond-to-your-letter">Respond to your letter</a>
+
+
+        
+      </div>
+    </details>
+
+    
+
+  </div>
+</div>
 {% endblock %}
