--- a/app/views/v5-enquiry/check-personal-details-dwp.html
+++ b/app/views/v5-enquiry/check-personal-details-dwp.html
@@ -44,16 +44,11 @@
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-xl">Check your personal details are correct</h1>
-        
-        
-        
-        
         <div class="nhsuk-inset-text">
           <span class="nhsuk-u-visually-hidden">Information: </span>
           <p>These are the personal details we currently hold for you. </p>
           <p>If these do not match, we may not be able to find your exemption and you may receive a penalty charge notice.</p>
         </div>
-        
         <dl class="nhsuk-summary-list">
 
           <div class="nhsuk-summary-list__row">
@@ -66,7 +61,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-name">
+              <a href="update-name-dwp">
                 Change<span class="nhsuk-u-visually-hidden"> name</span>
               </a>
         
@@ -84,7 +79,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-dob">
+              <a href="update-dob-dwp">
                 Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
               </a>
         
@@ -102,7 +97,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-address">
+              <a href="update-address-dwp">
                 Change<span class="nhsuk-u-visually-hidden"> address</span>
               </a>
         
