--- a/app/views/v5-enquiry/enquiry-letter-details.html
+++ b/app/views/v5-enquiry/enquiry-letter-details.html
@@ -94,19 +94,19 @@
             Exemption reason ticked
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Has a valid medical exemption certificate</p>
+            <p>Gets Income Support or income-related Employment and Support Allowance.</p>
             
           </dd>
       
         </div>
         
       </dl>
-      <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.  </p>
+      <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.</p>
       </dl>
     </div>
    
   </div>
-  <a href="/v4/what-happens-next-copy" class="nhsuk-button">
+  <a href="what-you-want-to-do-next" class="nhsuk-button">
     Continue
   </a>
 {% endblock %}
