--- a/app/views/v5-enquiry/enter-exemption-certificate-number.html
+++ b/app/views/v5-enquiry/enter-exemption-certificate-number.html
@@ -39,29 +39,14 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-personal-details" method="post" class="form">
+      <form action="enq-benefit-num" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>How was your name written on your [Benefit]?</h1>
-        <form action="v22/name" method="post">
-
-          <div class="nhsuk-form-group">
-              <label class="nhsuk-label" for="firstname">
-                  First name
-              </label>
-              <input class="nhsuk-input nhsuk-input--width-20" id="firstname" name="firstname" type="text" autocomplete="given-name">
-          </div>
-
-          <div class="nhsuk-form-group">
-              <label class="nhsuk-label" for="lastname">
-                  Last name
-              </label>
-              <input class="nhsuk-input nhsuk-input--width-20" id="lastname" name="lastname" type="text" autocomplete="family-name">
-          </div>
-
-
-                
-
+        <h1>What is your [Benefit] number?</h1>
+        <div class="nhsuk-form-group">
+          
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber" type="text">
+        </div>
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
         </button>
