--- a/app/views/v5-enquiry/enter-postcode.html
+++ b/app/views/v5-enquiry/enter-postcode.html
@@ -39,29 +39,18 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-personal-details" method="post" class="form">
+      <form action="v4-postcode-input" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>How was your name written on your [Benefit]?</h1>
-        <form action="v22/name" method="post">
-
-          <div class="nhsuk-form-group">
-              <label class="nhsuk-label" for="firstname">
-                  First name
-              </label>
-              <input class="nhsuk-input nhsuk-input--width-20" id="firstname" name="firstname" type="text" autocomplete="given-name">
-          </div>
-
-          <div class="nhsuk-form-group">
-              <label class="nhsuk-label" for="lastname">
-                  Last name
-              </label>
-              <input class="nhsuk-input nhsuk-input--width-20" id="lastname" name="lastname" type="text" autocomplete="family-name">
-          </div>
-
-
-                
-
+        <span class="nhsuk-caption-l">Your details</span>
+        <h1>Enter your postcode as shown on your letter</h1>
+        <div class="nhsuk-form-group">
+          <label class="nhsuk-label" for="one-half">
+            <div class="nhsuk-hint" id="example-with-hint-text-hint">
+              For example, WA4 1AB
+            </div>
+          </label>
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
+        </div>
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
         </button>
