--- a/app/views/v5-enquiry/update-dob-dwp.html
+++ b/app/views/v5-enquiry/update-dob-dwp.html
@@ -47,10 +47,10 @@
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="check-personal-details" method="post" class="form">
+    <form action="check-personal-details-dwp" method="post" class="form">
 
       <span class="nhsuk-caption-l">Confirm your entitlement</span>
-      <h1>What your date of birth?</h1>
+      <h1>What is your date of birth?</h1>
       <div class="nhsuk-hint" id="example-hint">
         For example, 31 3 1980
       </div>
