--- a/app/views/v5-enquiry/update-dob.html
+++ b/app/views/v5-enquiry/update-dob.html
@@ -50,7 +50,7 @@
     <form action="check-personal-details" method="post" class="form">
 
       <span class="nhsuk-caption-l">Confirm your entitlement</span>
-      <h1>What your date of birth?</h1>
+      <h1>What is your date of birth?</h1>
       <div class="nhsuk-hint" id="example-hint">
         For example, 31 3 1980
       </div>
