--- a/app/views/v5-enquiry/update-name-dwp.html
+++ b/app/views/v5-enquiry/update-name-dwp.html
@@ -39,7 +39,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-personal-details" method="post" class="form">
+      <form action="check-personal-details-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1>How was your name written on your [Benefit]?</h1>
