--- a/app/views/v5-enquiry/what-happens-next.html
+++ b/app/views/v5-enquiry/what-happens-next.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-What happens next
+  Start page template - NHS.UK prototype kit
 {% endblock %}
 
 
@@ -24,21 +24,21 @@ What happens next
       <h2>
         What happens next?
       </h2>
-<p>To try to confirm you were entitled to free NHS Prescriptions, we’ll:</p>
+      <p>We'll try to confirm you were entitled to free NHS prescriptions.</p>
+      <p>If we can confirm you were entitled we'll close your case and no further action will be needed.</p>
+      <p>If we cannot confirm you were entitled you'll be sent  Penalty Charge Notice.</p>
+      <p>To try and confirm you were entitled we'll:</p>
 <ul>
-  <li>ask for some details about your exemption, benefit or prepayment certificate</li>
+  <li>ask for some details about your benefit, exemption or prepayment certificate</li>
   <li>check for other reasons you may have been entitled to free NHS prescriptions</li>
   <li>tell you how to send us proof you were entitled to free NHS prescriptions if we need this</li>
-  <li>let you know the next steps</li>
+ 
 </ul>
 
-<div class="nhsuk-inset-text">
-  <span class="nhsuk-u-visually-hidden">Information: </span>
-  <p>If we can confirm you were entitled we will close your case and there will be no further action needed.</p>
-<p>If we cannot confirm you were entitled you will be sent a Penalty Charge Notice. This will include information on how and when to pay.</p>
-</div>
+
 <p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice">Find out more about how we use your information (opens in a new window)</a>.</p>
   <a href="did-you-have-this-benefit" class="nhsuk-button">
     Continue
   </a>
+  <p><a href="respond-to-your-letter">Cancel</a></p>
 {% endblock %}
