--- a/app/views/v5/exemption-certificate-number.html
+++ b/app/views/v5/exemption-certificate-number.html
@@ -23,7 +23,7 @@ Did you know your [Benefit] number?
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="dwp-exemption-number" method="get" class="form">
+      <form action="know-exemption-number" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h2>Do you know your [Benefit] number?</h2>
